@@ -1,3 +1,15 @@
+2015-01-20  YunQiang Su  <wzssyqa@gmail.com>
+
+        Fix failed to build for Linux/MIPS64EL
+        https://bugs.webkit.org/show_bug.cgi?id=124370
+
+        Reviewed by Darin Adler.
+
+        Add MIPS64EL support.
+
+        * wtf/Platform.h:
+        * wtf/dtoa/utils.h:
+
 2015-01-19  Alexey Proskuryakov  <ap@apple.com>
 
         Make ASan do bounds checks for WTF::Vector
